methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: reassignment to val
  if (forward=true){
             ^MethodsArgs:4: error: Boolean does not take parameters
    for (i <- 1 to stepCount){forward();}
                                     ^